--- a/212628262428202628202020205F006F691.html
+++ b/212628262428202628202020205F006F691.html
@@ -36,7 +36,7 @@
   <h5><a href="https://share.weiyun.com/qhh09yIO">密码获取详细教程</a></h5>
   <h3><a>↓ 获取密码方法 ↓</a></h3>
   <div style="display: flex; justify-content: center;">
-    <img style="max-width: 60%; height: auto;" src="https://y.gtimg.cn/music/photo_new/T053XD000SmT9A1hy0EP.jpg" alt="暂无图片">
+    <img style="max-width: 60%; height: auto;" src="https://pic1.zhimg.com/80/v2-cb224f234b55ba70416c587ad088f76b_720w.jpeg" alt="暂无图片">
   </div>
   <p style="text-align: center;"><a>长按图片qq或用VX扫一扫二维码<br>点击右下角详情，观看广告后自动复制密码！</a></p>
 </div>
